fix: increase textarea line-height for improved readability

--- a/gui/src/styles.scss
+++ b/gui/src/styles.scss
@@ -152,7 +152,7 @@ textarea {
     font-size: inherit;
     font-family: inherit;
     font-weight: inherit;
-    line-height: 1.35;
+    line-height: 1.5;
 
     &:focus {
         outline: none;
